# Revi

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md
.github/workflows/: ci.yml  pages.yml  release-artifacts.yml
backend/: config.py  main.py  models.py  pyproject.toml  requirements.txt  storage.py  workspace.py
backend/data/: metadata.json
backend/data/archive/: plans__sprint-1-design.json
backend/data/comments/: plans__sprint-1-design.json
backend/routers/: archive.py  comments.py  export.py  items.py  upload.py
backend/tests/: conftest.py  test_archive.py  test_comments.py  test_export.py  test_items.py  test_workflows.py
backend/tests/benchmarks/: bench_api.py
backend/tests/load/: locustfile.py
backend/workspace/plans/: sprint-1-design.md
backend/workspace/prototypes/: review-flow.html
common/adapters/: Cargo.toml
common/adapters/src/: lib.rs
common/cli/: Cargo.toml
common/cli/src/: lib.rs  main.rs
common/core/: Cargo.toml
common/core/src/: lib.rs
demo/: storyboard.md
doc_auto/: README.md  base_adoption_boundary.md  implementation_handoff.md
docs/: agent-guide.md  deploy-pages.md  index.md  load-test.md  user-guide.md
docs/guides/: dev.md  release.md
frontend/: index.html  package-lock.json  package.json  playwright.config.js  vitest.config.js
frontend/src/: App.vue  main.js
frontend/src/api/: client.js
frontend/src/components/: CommentPanel.vue  DocIndex.vue  FileSidebar.vue
frontend/src/components/viewers/: ImageViewer.vue  MarkdownViewer.vue  PrototypeViewer.vue
frontend/src/i18n/: en.json  index.js  zh.json
frontend/src/mock/: data.js
frontend/src/store/: index.js
frontend/src/tests/: mock-data.test.js  setup.js  store.test.js  utils.test.js
frontend/src/tests/bench/: data.bench.js
frontend/src/tests/components/: CommentPanel.test.js  DocIndex.test.js  FileSidebar.test.js  ImageViewer.test.js  MarkdownViewer.test.js  PrototypeViewer.test.js
frontend/src/tests/e2e/: archive.spec.js  home.spec.js  responsive.spec.js  review-design.spec.js  review-plan.spec.js  review-prototype.spec.js  upload.spec.js  workspace-setup.spec.js
frontend/src/views/: ArchiveView.vue  HomeView.vue  ReviewView.vue
scripts/: build-release.sh  load-smoke.sh  new-design.sh  new-plan.sh  new-prototype.sh  release-contract.sh  validate-release.sh  validate-rust-vue.sh
server/: Cargo.toml
server/.cargo/: config.toml
server/benches/: api_bench.rs
server/crates/revi-server/: Cargo.toml
server/crates/revi-server/src/: base.rs  config.rs  error.rs  lib.rs  main.rs  models.rs  router.rs
server/crates/revi-server/src/handlers/: archive.rs  comments.rs  config.rs  export.rs  items.rs  mod.rs  upload.rs
server/crates/revi-server/src/storage/: archive.rs  comment.rs  metadata.rs  mod.rs
server/crates/revi-server/src/workspace/: scanner.rs
server/crates/revi-server/tests/: test_archive.rs  test_comments.rs  test_config.rs  test_export.rs  test_items.rs  test_repo_convergence.rs  test_upload.rs  test_workflows.rs  test_workspace.rs
server/crates/revi-server/tests/common/: mod.rs
site/: index.html
site/assets/: route-manifest.json  runtime-contract.json  theme-tokens.json
site/demo/: index.html
site/guide/: docs-index.json  index.html
(+5 files in other folders)
