[workspace]
resolver = "2"
members = ["crates/revi-server"]

[profile.release]
opt-level = 3
lto       = true
codegen-units = 1
strip     = true

[workspace.dependencies]
axum            = { version = "0.7", features = ["multipart", "macros"] }
tokio           = { version = "1",   features = ["full"] }
tower-http      = { version = "0.5", features = ["cors", "fs"] }
tower           = { version = "0.4", features = ["util"] }
serde           = { version = "1",   features = ["derive"] }
serde_json      = "1"
uuid            = { version = "1",   features = ["v4"] }
chrono          = { version = "0.4", features = ["serde"] }
anyhow          = "1"
thiserror       = "1"
tracing         = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile        = "3"
reqwest         = { version = "0.12", features = ["json", "multipart"], default-features = false }
criterion       = { version = "0.5", features = ["html_reports", "async_tokio"] }
http-body-util  = "0.1"
bytes           = "1"
mime            = "0.3"
clap            = { version = "4", features = ["derive"] }
toml            = "0.8"
